tool/tests/snapshots/dotnet_target__enum_conversion@RawMyEnum.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

public enum MyEnum
{
    A = 0,
    B = 1,
    C = 2,
}

