tool/tests/snapshots/dotnet_target__enum_documentation@RawMyEnum.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

/// <summary>
/// Documentation for MyEnum.
/// </summary>
/// <remarks>
/// Some remarks about this struct.
/// </remarks>
public enum MyEnum
{
    /// <summary>
    /// All about A.
    /// </summary>
    A = 0,
    /// <summary>
    /// All about B.
    /// </summary>
    B = 1,
    /// <summary>
    /// All about C.
    /// </summary>
    /// <remarks>
    /// Some remarks about this variant.
    /// </remarks>
    /// <remarks>
    /// Even more remarks.
    /// </remarks>
    C = 2,
}

